--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "@types/node": "^14.14.22",
     "jshint": "^2.12.0",
     "mocha": "^8.2.1"
+  },
+  "mocha": {
+    "spec": "test.js"
   }
 }
